--- a/The Battle of Neighborhoods_Data Description.ipynb
+++ b/The Battle of Neighborhoods_Data Description.ipynb
@@ -14,9 +14,19 @@
     "## The Best Neighborhoods to live in Manhattan\n",
     "### Data Description\n",
     "\n",
-    "#### In this project, I will use the Manhattan neighborhoods data from https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0701EN-SkillsNetwork/labs/newyork_data.json and the Foursquare location data to explore and compare neighborhoods in Manhattan. \n",
+    "In this project, I will use three datasets from the following sources to explore the neighborhoods in Manhattan.\n",
     "\n",
-    "#### The newyork_data.json file provides the neighborhoods in Manhattan with the latitude and longitude coordinates. I will clean the data file and transform it into a pandas dataframe, and then create a map of Manhattan with neighborhoods to visualize the data. Next, I will utilize the Foursquare API and the request library in python to extract the venues in neighborhoods to explore neighborhoods and provide suggestions to people who are looking for the best neighborhoods to live in Manhattan. \n"
+    "1). New York city neighborhoods coordinates data from https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0701EN-SkillsNetwork/labs/newyork_data.json\n",
+    "\n",
+    "2). Average Rent in Manhattan neighborhoods data from https://www.rentcafe.com/average-rent-market-trends/us/ny/manhattan/\n",
+    "\n",
+    "3). Venues for each neighborhood obtained from Foursquare API\n",
+    "\n",
+    "The first data sources provide location (latitude and longitude) information for all the neighborboods from five boroughs in New York City. I extract coordinates information of 40 neighborhoods in Manhattan, which will be used to visualize the location of the neighborhoods in a Manhattan map and to gather venues information from Foursquare. \n",
+    "\n",
+    "The second data source provides average monthly rent data in U.S. dollars for each of the 40 neighborhoods in Manhattan, which could be used as a reference for budget planning assuming that most people moving to Manhattan will start off renting a place. For example, I could get information that Little Italy and Tribeca have the highest average rent at 5228 dollars among the 40 neighborhoods, while Marble Hill has the lowest rent at 1658 dollars, from this dataset. \n",
+    "\n",
+    "Using latitudes and longitudes of the neighborhoods from the first data source as input for the Foursquare API, I will explore the neighborhoods by analyzing the venues of people's interests. I will select and re-groupd the venues into five major types of venues of interest and make recommendations based on these venues. For example, the origional venue categories \"grocery stores\" and \"supermarkets\" are re-classified as a new venue type \"grocery\", indicating places for grocery shopping in the neighborhoods.\n"
    ]
   },
   {
